selfhost/test/typechecker/bindingdecl/error_export_bad_scope.out
Error at %FILE_NAME%:2:3
Invalid export modifier
  |    export val a = 1
       ^
Exported values may only appear at the top level scope in a module
