selfhost/test/typechecker/bindingdecl/error_export_bad_scope.abra
if true {
  export val a = 1
}